fixed some small spacing issues in printed version

--- a/css/custom.css
+++ b/css/custom.css
@@ -349,11 +349,11 @@ html {
     }
 
     .header {
-      margin-top: 0;
+      margin-top: 2.5rem;
     }
 
     .main-icons-header {
-      padding-top: 10px;
+      padding-top: 0.5rem;
     }
 
     .logo {
@@ -362,7 +362,7 @@ html {
     }
 
     p.logo-text{
-      font-size: 9pt;
+      font-size: 8pt;
       text-align: left;
       margin-right: 5pt;
     }
